# MoneyMan

./: README.md  manage.py  pyproject.toml  sp.cmd  tests.py
expenses/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
expenses/management/commands/: create_fake_expenses.py
expenses/migrations/: 0001_initial.py  0002_expense_description.py  0002_expense_is_star.py  0003_category_expense_category.py  0004_make_default_category.py  0005_alter_category_options_alter_expense_category.py  0006_alter_expense_category.py
expenses/static/: style.css
expenses/templates/: base.html
expenses/templates/expenses/: _expense_star.html  expense_confirm_delete.html  expense_detail.html  expense_form.html  expense_list.html
expenses/templates/registration/: login.html
money_man/: asgi.py  settings.py  urls.py  wsgi.py
